k8s/dev-cluster/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ui-route
  namespace: rottenbikes
spec:
  parentRefs:
  - name: rottenbikes
    sectionName: ui-https
  hostnames:
  - dev.rottenbik.es
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ui
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: rottenbikes
spec:
  parentRefs:
  - name: rottenbikes
    sectionName: api-https
  hostnames:
  - api-dev.rottenbik.es
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: api
      port: 8080
